# playground-engine

./: CMakeLists.txt  readme.md
assets/models/primitives/: beveled_cube.glb  cone.glb  cylinder.glb  plane.glb  sphere.glb
demos/main/: CMakeLists.txt
demos/main/src/: main.cpp
docs/: TODO.md
lib/: CMakeLists.txt
lib/assimp/port/jassimp/jassimp/src/jassimp/: AiScene.java
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw-3.3.8/: README.md
lib/glfw-3.3.8/docs/: news.dox
lib/glfw-3.3.8/docs/html/: group__errors.html  news.html
src/: main.cpp
src/application/: Application.cpp  Application.hpp  dialog.cpp  dialog.hpp  engine.cpp  engine.hpp  entity_manager.cpp  entity_manager.hpp  error.cpp  error.hpp  fmt.hpp  glfw_window.cpp  glfw_window.hpp  imgui_handler.cpp  imgui_handler.hpp  input.cpp  input.hpp  input_keys.hpp  log.cpp  log.hpp  misc.cpp  misc.hpp  statistics.cpp  statistics.hpp  time.hpp  window.hpp  window_interface.hpp
src/application/platform/: dialog.cpp  fs_events.hpp  fs_monitor.hpp
src/application/platform/linux/: linux_dialog.cpp  linux_dialog.hpp  linux_file_monitor.cpp  linux_file_monitor.hpp  linux_fs_monitor.cpp  linux_fs_monitor.hpp
src/common_util/: constraints.hpp  data_structure.hpp  debug.hpp  defer.hpp  io.cpp  io.hpp  macros.hpp  misc.cpp  misc.hpp  os.cpp  os.hpp  random.hpp  util.hpp  validation.hpp
src/data/: asset_manager.cpp  asset_manager.hpp  hash_table.hpp  id_table.hpp  map.hpp  model_loader.cpp  model_loader.hpp  string.hpp
src/events/: signal.hpp
src/game/: camera_comp.hpp  ecs.cpp  ecs.hpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  readme.md  transform.hpp
src/graphics/: Camera.cpp  Camera.hpp  CameraData.cpp  CameraData.hpp  camera.cpp  camera.hpp  framebuffer_interface.hpp  graphics_api.hpp  graphics_manager_interface.hpp  image.cpp  image.hpp  light.hpp  mesh.hpp  model.cpp  model.hpp  primitives.hpp  render_options.hpp  render_view.hpp  renderer_interface.hpp  renderer_structs.hpp  shader_interface.hpp  shader_params.hpp  shaders.hpp  types.hpp  util.cpp  util.hpp
src/graphics/openGL/: gaussian_blur.cpp  gaussian_blur.hpp  gl_buffers.cpp  gl_buffers.hpp  gl_framebuffer.cpp  gl_framebuffer.hpp  opengl_error.cpp  opengl_error.hpp  opengl_manager.cpp  opengl_manager.hpp  opengl_renderer.cpp  opengl_renderer.hpp  opengl_shader.cpp  opengl_shader.hpp  shadow_map.cpp  shadow_map.hpp
src/graphics/vulkan/: graphics_errors.cpp  graphics_errors.hpp  queue_families.cpp  queue_families.hpp  swap_chain.cpp  swap_chain.hpp  util.hpp  vulkan_manager.cpp  vulkan_manager.hpp  vulkan_shader.cpp  vulkan_shader.hpp
src/shaders/: color.frag  extrude_from_normals.vert  gaussian_blur.frag.glsl  lighting.frag  lighting.vert  omni_shadow_map.geo.glsl  post_processing.glsl  quad.vert.glsl  screen.frag  screen.vert  shader.frag  shader.vert  shadow_map.frag.glsl  shadow_map.vert  skybox.frag  skybox.vert
